--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>梁健略帅</title>
+    <style>
+        h1 {
+            text-align: center;
+            color: rgb(16, 228, 175);
+        }
+    </style>
 </head>
+
 <body>
-梁健最帅
+    <h1>梁健略帅</h1>
 </body>
+
 </html>
