--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
 <body>
     <h1>梁健略帅</h1>
+    <div>
+        <img src="https://th.bing.com/th/id/R.5d931f9384a62ee0967dbb93585d4fec?rik=Zq0S4rI7n9T2ng&riu=http%3a%2f%2fn.sinaimg.cn%2fent%2ftransform%2f20161223%2ffou2-fxyxusa4964282.jpg&ehk=X1Y6KqMJZuCsTPpO9quHf2LiUmaA0D%2bnM3LjrJL9FA8%3d&risl=&pid=ImgRaw&r=0" alt="这是梁健">
+    </div>
 </body>
 
 </html>
