--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             text-align: center;
             color: rgb(16, 228, 175);
         }
+        div{
+            text-align: center;
+        }
     </style>
 </head>
 
