--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 }
 
 #vid {
-    background-color: aqua;
+    background-color:  rgba(227, 242, 242, 0.479);
     width: 170px;
     height: 120px;
     margin-left: 95px;
